@@ -5,7 +5,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -18,8 +17,7 @@ import clipper2.engine.Clipper64;
 class TestLines {
 
 	private static final List<Arguments> testCases() throws IOException {
-		return ClipperFileIO.loadTestCases("Lines.txt").stream().map(t -> Arguments.of(t, t.caption(), t.clipType(), t.fillRule()))
-				.collect(Collectors.toList());
+		return ClipperFileIO.loadTestCases("Lines.txt").stream().map(t -> Arguments.of(t, t.caption(), t.clipType(), t.fillRule())).toList();
 	}
 
 	@MethodSource("testCases")
