@@ -5,7 +5,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -19,7 +18,7 @@ class TestPolygons {
 
 	private static final List<Arguments> testCases() throws IOException {
 		return ClipperFileIO.loadTestCases("Polygons.txt").stream().map(t -> Arguments.of(t, t.caption(), t.clipType(), t.fillRule()))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	@MethodSource("testCases")
@@ -41,7 +40,8 @@ class TestPolygons {
 
 		if (test.count() > 0 && Math.abs(solution.size() - test.count()) > 2
 				&& Math.abs(solution.size() - test.count()) / test.count() > 0.02) {
-			assertTrue(Math.abs(solution.size() - test.count()) < 4, String.format("Incorrect count: %s", (int) Math.abs(solution.size() - test.count())));
+			assertTrue(Math.abs(solution.size() - test.count()) < 4,
+					String.format("Incorrect count: %s", (int) Math.abs(solution.size() - test.count())));
 		}
 	}
 }
